--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -59,7 +59,13 @@
     <!-- lab02 -->
     <div class="container">
       <h6>hw02 - unicode finder </h6>
-      <iframe frameBorder="0" width="100%" height="180px" src="./labs/lab02/index.html" scrolling="no"></iframe>
+      <iframe frameBorder="0" width="100%" height="280px" src="./labs/lab02/index.html" scrolling="no"></iframe>
+    </div>
+
+    <!-- lab03 -->
+    <div class="container">
+      <h6>hw03 - unicode finder </h6>
+      <iframe frameBorder="0" width="100%" height="380px" src="./labs/lab03/index.html" scrolling="no"></iframe>
     </div>
 
 
