--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -65,9 +65,28 @@
     <!-- lab03 -->
     <div class="container">
       <h6>hw03 - unicode finder </h6>
-      <iframe frameBorder="0" width="100%" height="380px" src="./labs/lab03/index.html" scrolling="no"></iframe>
+      <iframe frameBorder="0" width="100%" height="1880px" src="./labs/lab03/index.html" scrolling="no"></iframe>
     </div>
 
+    <div class="container">
+      <h6>hw04 - unicode finder </h6>
+      <iframe frameBorder="0" width="100%" height="380px" src="./labs/lab04/index.html" scrolling="no"></iframe>
+    </div>
+
+    <div class="container">
+      <h6>hw05 - unicode finder </h6>
+      <iframe frameBorder="0" width="100%" height="2180px" src="./labs/lab05/index.html" scrolling="no"></iframe>
+    </div>
+
+    <div class="container">
+      <h6>hw06 - unicode finder </h6>
+      <iframe frameBorder="0" width="100%" height="1880px" src="./labs/lab06/index.html" scrolling="no"></iframe>
+    </div>
+
+    <div class="container">
+      <h6>hw07 - unicode finder </h6>
+      <iframe frameBorder="0" width="100%" height="1980px" src="./labs/lab07/index.html" scrolling="no"></iframe>
+    </div>
 
   </body>
 </html>
